docs/sdd/SPEC-SUIYIN-ADMIN-055/1.1.0/spec.md
---
spec_id: SPEC-SUIYIN-ADMIN-055
title: "管理列表筛选表格及来源一致性"
version: 1.1.0
status: implemented
level: L2
project: "suiyin-admin HTML prototype"
surface: "Admin"
tenants: "当前全部十五租户"
owner: "房总"
author: "Codex"
constitution: "prototype-sdd@1.4.1"
depends_on_specs: "SPEC-SUIYIN-ADMIN-054@1.0.0"
last_updated: 2026-09-20
---

> 本轮变更（2026-09-20，1.1.0）：房总明确要求“所有表格的表头都保持冻结，这样下滑的时候不会忘记这一行的内容是那个项目”。新增 R005 承载全部管理表格的滚动列语义，不改各页字段、数据、分页或业务规则。该 USER 指令直接授权本地实现；状态 implemented：共享模块已安装，当前 752 个入口盘点和 333 个可应用场景的真实滚动测量通过，另有多层表头、弹窗与浮层边界检查，详见 verification.md 的 1.1.0 记录。2026-09-20 房总最新指令“完整推送，并给陈宣宇在管理页代码仓建立 Issue 实现管理页销售变声统计的这个功能，提出环境深圳艺星，提出人ZHONG”授权本轮完整原型交付与销售变声统计工程建单。生产实施继续由目标代码仓正式工程流程完成。

# 管理列表筛选表格及来源一致性

## 1. 审核摘要
- **用户问题**：销售使用统计暴露了通用实现与实际页面之间的差距，同样偏差也存在于整个管理后台。
- **完成后变化**：有来源的结构和交互按真实页面恢复，各租户来源透明；管理者向下查看长表时表头持续可见，能辨认每列含义。
- **本次范围**：管理列表筛选表格及来源一致性；按源表单保留字段标签、日期初值、单选和复选结构；查询和重置依据真实动作，不普遍添加日期快捷项。 下拉选项以当前租户当前页面上下文为优先，不借用其他租户的实体选项；枚举与实体分开。 表格列的宽度、对齐、可排序属性以对应采样为准，保留空白列；分页及额外工具仅在来源要求时出现。 不向每个统计页自动插入汇总卡；来源说明直接区分本租户采样、参考样本与合成演示。
- **明确不做**：不修改线上和生产仓，不增加冻结列或更改业务字段/数据；本轮已获完整推送授权，发布新版本合同与派生产物；不改旧版本快照。历史采集或 DOM 检查不代表当前线上逐像素一致。
- **需要房总拍板**：无；既有范围来自全管理页一致指令，本次表头冻结由 E005 明确直接确认。
- **AI 新提案**：无新增业务；证据矩阵、专用渲染和来源提示为实现选择。

## 2. 用户问题与预期结果
评审者在相同租户页面对照筛选、表格、操作和内容。此前通用模板添加不存在的功能，削弱真实页面参照价值。
O001：所有登记入口完成证据分类，有硬证据的差异修复可追溯，缺少采集的地方有明确说明。

## 3. 范围
### 3.1 In Scope
当前15租户752入口84路由，静态HTML/CSS/JS/JSON；已采集UI结构和可还原的交互。所有实际渲染的表格均适用冻结，包括通用列表、专用统计、菜单树表、页面内小表及弹窗中的表格；没有表头/行列语义的非表格内容不凭空新增表头。
### 3.2 Out of Scope
Flutter / React / Go 生产端；真实发送/保存/删除；生产发布和全管理页工程Issue；缺证据的像素保证。
### 3.3 适用矩阵
Admin全部登记租户；逐项证据见054 evidence/matrix.json。共享profile只说明采集租户的几何，不证明所有租户内容相同。

## 4. 证据与来源
| ID | 类型 | 来源 | 支持的结论 | 可信状态 |
|---|---|---|---|---|
| E001 | USER | 本对话2026-09-20全管理页保持一致指令 | 持续执行已证实偏差纠正 | confirmed |
| E002 | DESIGN | admin-live-reference-2026-09-18/captures/content、captures/expanded、full-content/ui-ux-parity | 真实内容、表单、按钮和几何 | observed |
| E003 | SPEC | SPEC-SUIYIN-ADMIN-054@1.0.0 | 已批准原型范围与静态边界 | approved |
| E004 | PROTO | admin-wide-alignment-20260920审计和当前源码 | 当前结构偏差与根因 | observed |
| E005 | USER | 2026-09-20 本轮：“所有表格的表头都保持冻结，这样下滑的时候不会忘记这一行的内容是那个项目” | 所有管理表格在所属滚动区域内保持列标题可见 | confirmed |
### 4.1 已发现冲突
现有通用模板不自动等于实际规范。原历史允许有标签的参考和演示样本继续有效，但要明确采样租户，不能借作当前租户实采；加载中快照不是确认空态。

E005 新增全表冻结要求，覆盖当前页面表头会随内容滚出视口的实现。该变化是用户明确增加的可读性要求，不冒充从旧截图已观察到的事实；R003 原列宽/对齐/排序和各页专用数据结构仍保持。054@1.0.0 继续负责总体范围，056@1.0.0 继续负责领域语义，无须因共享滚动显示变化升版。旧 1.0.0 版本包保留历史；本目录当前 verification 与 source-convergence 使用 1.1.0 的实际滚动证据，不沿用旧检查数作为本轮通过。
### 4.2 精确规格依赖
SPEC-SUIYIN-ADMIN-054@1.0.0；父规格版本或批准状态变化时重新评估。

## 5. 用户场景与验收
### US01 — 对照真实管理后台
#### AC-R001-01 — 按源表单保留字段标签、日期初值、单选和复选结
- Given 当前租户页面及已保存真实证据。
- When 打开相应页面并执行关联筛选或操作。
- Then 具有真实表单的代表页标签、控件和按钮保持来源顺序，日期不被表中最早时间覆盖。

#### AC-R002-01 — 下拉选项以当前租户当前页面上下文为优先，不借
- Given 当前租户页面及已保存真实证据。
- When 打开相应页面并执行关联筛选或操作。
- Then 在各租户解析销售、部门、账号和门店时，无跨租户捕获记录及明显异类选项。

#### AC-R003-01 — 表格列的宽度、对齐、可排序属性以对应采样为准
- Given 当前租户页面及已保存真实证据。
- When 打开相应页面并执行关联筛选或操作。
- Then 逐列DOM对比已采样表头，数字及空白列正确，无无依据分页、列设置或刷新。

#### AC-R004-01 — 不向每个统计页自动插入汇总卡；来源说明直接区
- Given 当前租户页面及已保存真实证据。
- When 打开相应页面并执行关联筛选或操作。
- Then 普通统计页无额外卡片，来源按钮可直接看出样本身份；本租户采样空与参考演示有明确区别。

### US02 — 下滑长表仍能辨认列含义
#### AC-R005-01 — 任意表格纵向滚动
- Given 任一登记租户中的普通表格、专用统计表、菜单树表或弹窗表格，且表身超过可见范围。
- When 在该表格所属滚动容器内持续向下滚动并到达表格末尾。
- Then 列标题停留在所属可见区域顶部且不被表身遮盖，直到该表退出可见区域；表格结束后不继续覆盖下一块内容或弹窗动作。短表无滚动时保持原布局。

#### AC-R005-02 — 多层表头、横向滚动和重新渲染
- Given 多行表头、宽表、嵌套滚动容器，或通过筛选/分页/展开后重新生成的表格。
- When 纵向和横向滚动、调整窗口、切换路由或重新查询。
- Then 全部表头行依顺序冻结且不互相覆盖；表头与表身同列保持对齐、横向移动同步；冻结范围属于当前表，不覆盖日历、下拉、菜单或其他弹层。排序/选择/焦点保持可操作，不多出重复可读表头。

## 6. 业务规则
| ID | 规则 | 级别 | 来源 | Profile Override | 验收覆盖 |
|---|---|---|---|---|---|
| R001 | 按源表单保留字段标签、日期初值、单选和复选结构；查询和重置依据真实动作，不普遍添加日期快捷项。 | MUST | E001/E002 | 无 | AC-R001-01 |
| R002 | 下拉选项以当前租户当前页面上下文为优先，不借用其他租户的实体选项；枚举与实体分开。 | MUST | E001/E002 | 无 | AC-R002-01 |
| R003 | 表格列的宽度、对齐、可排序属性以对应采样为准，保留空白列；分页及额外工具仅在来源要求时出现。 | MUST | E001/E002 | 无 | AC-R003-01 |
| R004 | 不向每个统计页自动插入汇总卡；来源说明直接区分本租户采样、参考样本与合成演示。 | MUST | E001/E002 | 无 | AC-R004-01 |
| R005 | 所有管理页表格表头在所属纵向滚动可见区域顶部冻结，随当前表结束解除占位；多行表头全部保留且不互相覆盖，宽表头与表身横向同步并保持列对齐。冻结适用于普通/专用/菜单/弹窗表格以及重渲染后的表，不改变数据、排序、筛选、分页、可见性或表格外浮层的操作；无可滚动内容保持原布局。 | MUST | E005 | 各页面既有滚动容器与表头层级 | AC-R005-01、AC-R005-02 |
### 6.1 不变量
INV001：静态演示不得提交真实业务写入。INV002：跨租户样本不得冒充本租户事实。INV003：未采集、加载中、业务空态分开。
### 6.2 默认值与配置
优先保留真实表单默认值；历史本地修改保留。演示数据沿用已批准数据源并显示身份。

## 7. 状态与交互
有证据默认态→筛选草稿→查询结果；日期无效保留上一结果；缺少样本→说明；读取失败→重试；编辑取消→不保存；本地保存→可恢复。控件保留focus、禁用、溢出、键盘与关闭状态。实际视觉待浏览器复核。表头在滚动跨过自身起始位置时进入冻结，在表格结束或表格销毁后停止显示；改变筛选、分页、树展开、尺寸或路由后重新按当前表几何生效。

## 8. 数据、权限与隐私
数据仅本地公开原型已脱敏样本；姓名沿用原已有员工名，客户和联系方式仍按公开包规则处理。来源指明本租户、参考租户或合成。导航和菜单可见性继续按既有本地权限规则。

## 9. 端与租户差异
只作用Admin。各租户保留菜单及字段差异，不把一个租户的采样下拉当作全局选项。

## 10. 原型实现契约
目标 E:/AI 项目/佰智德三/碎银原型/suiyin-admin/prototype；复用_shell、AdminLiveUI、AdminControls及已修复的菜单和统计模块。共享模块与领域专用模块分别实施。本规格全管理页工程交付状态 not-requested；052 的工程 I001 仅引用本规格 R005 / AC-R005-01/02 验证销售变声统计本页，不扩大为所有管理页工程改造。

## 11. 非目标与约束
不承诺实时后端，不修改原始采集，不使用脚本加载成功代替视觉验收。不新增未知图表、业务字段或跨租户库存。

## 12. 待确认问题
| Q-ID | 问题 | 推荐答案 | 影响 | 阻塞? | 状态 / 结论 |
|---|---|---|---|---|---|
| Q001 | Chrome连接不可用，缺少最新视觉复验 | 完成可验证修复并保留证据缺口 | 不能声明全部像素一致 | 否 | deferred-evidence |

## 13. 房总审核
- [x] 范围及持续纠偏执行直接来自房总本轮指令。
- [x] E005 直接确认全部管理表格冻结；仅本地静态实现，业务及数据边界保持。
- [x] 精确依赖已锁定，缺证据项明确分层。
- [x] 可以进入Prototype Plan。
**审核结论**：approved
**审核人**：房总
**审核日期**：2026-09-20
**审核备注**：1.1.0 新增 R005 直接来自用户本次“所有表格的表头都保持冻结”要求；记录直接执行授权，不声称用户另行阅读或审核了生成文件。

## 14. 变更历史
| 版本 | 日期 | 作者 | 变化 | 原因 |
|---|---|---|---|---|
| 1.0.0 | 2026-09-20 | Codex | 承接全管理页纠偏 | 用户扩大到完整管理后台 |

| 1.1.0 | 2026-09-20 | 房总直接指令 / Codex | 新增 R005 与 AC-R005-01/02，所有管理表格滚动时保留表头；其余业务与租户边界不变 | E005，长表滚动仍可辨认列含义 |
